@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Added clarification to Fl_GL_Window mode
+	  function (STR #1945)
 	- Fixed Fluid textcolor output (STR #1992)
 	- Fixed wrong default value of Fl_Spinner in
 	  Fluid (STR #1991)
